<?xml version="1.0"?>
<package format="2">
  <name>schunkPG70_description</name>
  <version>0.0.1</version>
  <description>The schunkPG70_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="arprice@gatech.edu">Andrew Price</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
</package>
